force-app/main/default/objects/Transport_Participant__c/Transport_Participant__c.object-meta.xml
<CustomObject>
    <description>Transport Object - Deprecated</description>
    <label>Transport Participant</label>
    <nameField>
        <displayFormat>TP{00000}</displayFormat>
        <label>Transport Participant Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transport Participants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>