force-app/main/default/objects/Transport_Participant__c/fields/Dropped_Off__c.field-meta.xml
<CustomField>
    <fullName>Dropped_Off__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dropped Off</label>
    <type>Checkbox</type>
</CustomField>