force-app/main/default/objects/Transport_Participant__c/fields/Family_Member_Attendance__c.field-meta.xml
<CustomField>
    <fullName>Family_Member_Attendance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Family Member Attendance</label>
    <referenceTo>Family_Member_Attendance__c</referenceTo>
    <relationshipLabel>Transport Participants</relationshipLabel>
    <relationshipName>Transport_Participants</relationshipName>
    <type>Lookup</type>
</CustomField>