force-app/main/default/objects/Transport_Participant__c/fields/Participant_Type__c.field-meta.xml
<CustomField>
    <fullName>Participant_Type__c</fullName>
    <label>Participant Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Family Member</fullName>
            </value>
            <value>
                <fullName>Volunteer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>