force-app/main/default/objects/Transport_Participant__c/fields/Permission_To_Travel_Unaccompanied__c.field-meta.xml
<CustomField>
    <fullName>Permission_To_Travel_Unaccompanied__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Permission To Travel Unaccompanied</label>
    <type>Checkbox</type>
</CustomField>