force-app/main/default/objects/Transport_Participant__c/fields/Pick_Up_Location__c.field-meta.xml
<CustomField>
    <fullName>Pick_Up_Location__c</fullName>
    <label>Pick Up Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Transport_Locations</valueSetName>
    </valueSet>
</CustomField>