force-app/main/default/objects/Transport_Participant__c/fields/Picked_Up__c.field-meta.xml
<CustomField>
    <fullName>Picked_Up__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Picked Up</label>
    <type>Checkbox</type>
</CustomField>