force-app/main/default/objects/Transport_Participant__c/fields/Special_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Special_Requirements__c</fullName>
    <label>Special Requirements</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>