force-app/main/default/objects/Transport_Participant__c/fields/Transport__c.field-meta.xml
<CustomField>
    <fullName>Transport__c</fullName>
    <label>Transport</label>
    <referenceTo>Transport__c</referenceTo>
    <relationshipLabel>Transport Participants</relationshipLabel>
    <relationshipName>Transport_Participants</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>